@@ -1,3 +1,14 @@
+2021-06-10  Devin Rousso  <drousso@apple.com>
+
+        (r278618) media/modern-media-controls/overflow-support/chapters.html is timing out since introduction
+        https://bugs.webkit.org/show_bug.cgi?id=226828
+        <rdar://problem/79084756>
+
+        Unreviewed followup for flaky test.
+
+        * media/modern-media-controls/overflow-support/chapters.html:
+        Add manual timeouts for each `await` to see where exactly the test fails.
+
 2021-06-10  Alex Christensen  <achristensen@webkit.org>
 
         Move Timing-Allow-Origin checks to the network process
